--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "ETHERSCAN_USER":"",
     "ETHERSCAN_PASS":"",
-    "DATASET_PATH" : "./Dataset"
+    "DATASET_PATH" : "./Dataset",
+    "API_KEY" : "SQC918GDCD8TXY5MJUPNFMKC73UK56A7KW"
 }
