--- a/config.json
+++ b/config.json
@@ -2,5 +2,5 @@
     "ETHERSCAN_USER":"",
     "ETHERSCAN_PASS":"",
     "DATASET_PATH" : "./Dataset",
-    "API_KEY" : "SQC918GDCD8TXY5MJUPNFMKC73UK56A7KW"
+    "API_KEY" : ""
 }
